Sat Jun  8 21:03:40 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_absint_singlebit_p): New function.

	* internal.h (rb_absint_singlebit_p): Declared.

	* time.c (v2w_bignum): Use rb_absint_singlebit_p instead of
	  rb_big_abs_find_minbit.
	  (rb_big_abs_find_minbit): Removed.

Sat Jun  8 20:24:23 2013  Tanaka Akira  <akr@fsij.org>

	* time.c (rb_big_abs_find_maxbit): Use rb_absint_size.
	  (bdigit_find_maxbit): Removed.

Sat Jun  8 19:47:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* class.c (include_modules_at): invalidate method cache if included
	  module contains constants

	* test/ruby/test_module.rb: add test

Sat Jun  8 19:31:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* random.c (limited_big_rand): declare rnd, lim and mask as uint32_t
	  to avoid 64 bit to 32 bit shorten warnings.

Sat Jun  8 19:23:53 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/Makefile.sub: r41163 changed win32/win32.c and configure.in
	  but it didn't treat about mswin32/mswin64, so fix it.
	  NOTE: this needs a review by usa whether additional condition is
	  required or not.

Sat Jun  8 19:06:26 2013  Tanaka Akira  <akr@fsij.org>

	* random.c: Unused RBignum internal accessing macros removed.

Sat Jun  8 19:04:15 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (limited_big_rand): The argument, limit, is changed to
	  VALUE.  Use rb_integer_pack and rb_integer_unpack.

Sat Jun  8 17:15:18 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (make_seed_value): Fix the length given for
	  rb_integer_unpack.

Sat Jun  8 16:38:02 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_unpack): Don't use rb_funcall if possible.

	* random.c: Use uint32_t for elements of seed.
	  (make_seed_value): Use rb_integer_unpack.

Sat Jun  8 15:58:18 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (rand_init): Add a cast to fix clang compile error:
	  random.c:410:32: error: implicit conversion loses integer precision: